# exo

./: .gitignore  requirements.txt
a/: README.md
e/: README.md  pyproject.toml
e/ai_scraper/: __init__.py
e/ai_scraper/agents/: README.md  __init__.py  web_research_agent.py  web_scraping_agent.py
e/ai_scraper/agents/examples/: custom_agent.py
e/ai_scraper/providers/: __init__.py  gemini.py  ollama.py
e/ai_scraper/tools/: README.md  __init__.py  extract.py  search.py
e/ai_scraper/tools/examples/: custom_tools.py
e/examples/: web_research.py  web_research_example.py
e/tests/: __init__.py
e/tests/providers/: test_gemini.py  test_ollama.py
exo/agents/: __init__.py
exo/providers/: __init__.py  base.py
exo/providers/gemni/: gemni.py
p/exo/agents/: base.py  web_agent.py
p/exo/core/: config.py  exceptions.py
p/exo/examples/: custom_web_scraper.py
p/exo/examples/agents/: __init__.py  cursor_valuation_combined.py  cursor_valuation_example.py  gemini_example.py  huggingface_example.py  ollama_example.py  openai_example.py  web_agent_example.py
p/exo/examples/providers/: provider_example.py
p/exo/examples/tools/: cursor_valuation_scraper.py  scraper_example.py  tool_calling_example.py  web_tools_example.py
p/exo/providers/: __init__.py  base.py  gemini.py  huggingface.py  ollama.py  openai.py
p/exo/scraper/browser/: base.py
p/exo/scraper/tools/: scraper.py  web_tools.py
p/exo/tools/: base.py  simple_scraper.py  web_scraper.py
p/exo/utils/: async_utils.py  logging.py
